--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "addon-demo",
   "version": "0.0.0",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "description": "Small description for addon-demo goes here",
   "repository": "",
   "license": "MIT",
@@ -14,12 +17,13 @@
     "build": "ember build",
     "lint:hbs": "ember-template-lint .",
     "lint:js": "eslint .",
-    "start": "ember serve",
+    "start": "ember serve --port 4676",
     "test": "ember test"
   },
   "devDependencies": {
     "@ember/jquery": "^0.5.2",
     "@ember/optional-features": "^0.6.3",
+    "betterup-component-library": "*",
     "broccoli-asset-rev": "^2.7.0",
     "ember-ajax": "^5.0.0",
     "ember-cli": "~3.9.0",
@@ -47,5 +51,10 @@
   },
   "engines": {
     "node": "6.* || 8.* || >= 10.*"
+  },
+  "dependencies": {
+    "ember-cli-sass": "^10.0.0",
+    "ember-component-css": "^0.6.7",
+    "sass": "^1.19.0"
   }
 }
